Bug 326787 - Speed transfer is not shown
Summary: Speed transfer is not shown
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: send-file (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-28 13:57 UTC by Alex Fiestas
Modified: 2013-10-28 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2013-10-28 13:57:12 UTC
When sending a file big enough to make the job appear, the speed is not shown (it always says 0kb).

Progress is shown correctly though.

Reproducible: Always
Comment 1 Alex Fiestas 2013-10-28 16:58:59 UTC
Git commit 4c1f4a10caf9ad888ba728c3dfb74f47d200a3f4 by Àlex Fiestas.
Committed on 28/10/2013 at 16:56.
Pushed by afiestas into branch 'kde-telepathy-0.7'.

Implement speed calculation for incoming/out-going transfers

This is not done automagically by KJob so we have to implement it
by ourselves.

M  +3    -3    src/handle-incoming-file-transfer-channel-job.cpp
M  +3    -3    src/handle-outgoing-file-transfer-channel-job.cpp
M  +23   -0    src/telepathy-base-job.cpp
M  +2    -0    src/telepathy-base-job.h
M  +3    -0    src/telepathy-base-job_p.h

http://commits.kde.org/telepathy-filetransfer-handler/4c1f4a10caf9ad888ba728c3dfb74f47d200a3f4