Implement speed calculation for incoming/out-going transfers

This is not done automagically by KJob so we have to implement it
by ourselves.

BUG: 326787